[tool.poetry]
name = "airproject"
version = "0.1.0"
description = ""
authors = ["Scott McGuire"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
anthropic = "^0.34.2"
openai = "0.27.8"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
